# Wechat-Archive-Analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.learnings/: ERRORS.md
desktop/: README.md  main.js  package.json
desktop/electron/: README.md  package.json
desktop/scripts/: build.py
docs/diagrams/: diagram.md
evals/: evals.json
src/wxtools/: __init__.py  __main__.py
src/wxtools/api/: app.py  dependencies.py
src/wxtools/application/: __init__.py  account_service.py  cache_service.py  (+6 more)
tests/: conftest.py
tests/golden/: test_golden_export.py
tests/integration/: test_api.py  test_api_contracts.py  test_e2e_checklist.py  test_onboarding_api.py
tests/unit/: test_account_discovery.py  test_acl.py  test_attachment_resolver.py  test_bootstrap.py  test_cache_metadata.py  test_cli.py  test_config.py  test_csv_writer.py  test_db_reader.py  test_db_reader_pagination.py  test_decryptor.py  test_errors.py  test_fts_index.py  test_html_writer.py  test_json_writer.py  test_key_commands.py  test_key_extractor.py  test_key_validator.py  test_keystore.py  test_logging_setup.py  test_onboarding_service.py  test_output.py  test_path_discovery.py  test_paths.py  test_platform.py  test_plugin_registry.py  test_schema.py  test_schema_mapper.py  test_secret_backends.py  test_session_integration.py  test_sns_reader.py  test_unlock_session.py
ui/web/: index.html  tsconfig.tsbuildinfo  vite.config.ts
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  main.tsx
(+199 files in other folders)
